# discord-bot-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt  thing.py
backend/: __main__.py  commands.py  config.py  google_handler.py  logger.py  logging.py  main.py  router.py  server.py  test.py  timing.py  worker.py
bot_worker/: commands.py  config.py  exceptions.py  google_handler.py  logger.py  reddit.py  router.py  server.py  timing.py  worker.py
config/: config.cfg  test_config.cfg
scripts/: bot-worker.service  deploy.sh  install.sh
